HTTP API: added tracker list
