# http_api/openapi3.yaml
@@ -254,6 +254,144 @@ paths:
                 $ref: '#/components/schemas/Error'
         '500':
           description: internal server error
+  /api/tracker:
+    get:
+      summary: Lists all trackers
+      tags:
+        - tracker
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Tracker'
+        '500':
+          description: internal server error, see error field for details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    post:
+      summary: Adds a tracker
+      tags:
+        - tracker
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                url:
+                  type: string
+              required:
+                - url
+              example:
+                url: "http://tracker.openbittorrent.com:80/announce"
+      responses:
+        '201':
+          description: created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Tracker'
+        '400':
+          description: missing or invalid tracker URL
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '409':
+          description: tracker with given URL already exists
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: internal server error, see error field for details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /api/tracker/{tracker}:
+    get:
+      summary: Get details for a tracker by ID
+      tags:
+        - tracker
+      parameters:
+        - name: tracker
+          in: path
+          description: ID of the tracker of interest
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Torrent'
+        '400':
+          description: invalid ID specified
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: torrent with given ID not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: internal server error, see error field for details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    delete:
+      summary: Deletes tracker
+      tags:
+        - tracker
+      parameters:
+        - name: id
+          in: path
+          description: ID of the tracker of interest
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: deleted successfully
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: null
+                nullable: true
+        '400':
+          description: invalid value specified
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: tracker with given ID not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: internal server error, see error field for details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     Error:
@@ -342,3 +480,13 @@ components:
           type: number
           format: uint
           example: 65536
+    Tracker:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+          example: 42
+        url:
+          type: string
+          example: "http://tracker.openbittorrent.com:80/announce"
